# aof

./: .env  .gitignore  Cargo.toml
backend/: Cargo.toml
backend/sql/: blog_entry.psql  blog_entry2.psql  create_database.psql  populate_database_with_fake_data.psql
backend/src/: main.rs
frontend/: Cargo.toml  Trunk.toml  index.html  style.scss
frontend/src/: main.rs
src/: lib.rs
