[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aof = {path=".."}
actix-web = { version = "4.2.1", features = ["rustls"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
sqlx = { version = "0.6.2", features = ["postgres", "macros", "json", "runtime-actix-rustls", "chrono"] }
chrono = { version = "0.4.23", features = ["serde"] }
