[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

[dependencies]
aof = {path=".."}
chrono = { version = "0.4.23", features = ["serde"] }
gloo-net = "0.2.4"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
wasm-bindgen = "0.2.83"
yew = "0.19.3"
yew-router = "0.16.0"

